// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcMultipleValuesSelection > search > should not have the search visible if isSearchable is set to false 1`] = `
<div
  class="ec-multiple-values-selection"
  data-test="ec-multiple-values-selection"
>
  <!--v-if-->
  
  <!--v-if-->
  <div
    class="ec-multiple-values-selection__values"
  >
    <ul>
      
      <li
        class="ec-multiple-values-selection__value-wrapper"
        data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
      >
        <div
          class="ec-checkbox ec-multiple-values-selection__checkbox"
          data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-0 ec-checkbox"
        >
          <input
            class="ec-checkbox__input"
            data-test="ec-checkbox__input"
            id="ec-checkbox-1"
            type="checkbox"
          />
          <div
            class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
          >
            <span
              class="ec-checkbox__check-icon-wrapper"
              data-test="ec-checkbox__check-icon-wrapper"
            >
              <!--v-if-->
            </span>
            <label
              class="ec-checkbox__label ec-checkbox__label--is-single-line"
              data-test="ec-checkbox__label"
              for="ec-checkbox-1"
              title="Success"
            >
              
              <div
                class="ec-multiple-values-selection__label-wrapper"
              >
                <svg
                  class="ec-icon ec-icon--success ec-multiple-values-selection__icon"
                  height="20"
                  width="20"
                >
                  <use
                    xlink:href="#ec-rounded-check"
                  />
                </svg>
                <span
                  class="ec-multiple-values-selection__label-text"
                >
                  Success
                </span>
              </div>
              
            </label>
          </div>
          <!--v-if-->
        </div>
      </li>
      <li
        class="ec-multiple-values-selection__value-wrapper"
        data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
      >
        <div
          class="ec-checkbox ec-multiple-values-selection__checkbox"
          data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-1 ec-checkbox"
        >
          <input
            class="ec-checkbox__input"
            data-test="ec-checkbox__input"
            id="ec-checkbox-2"
            type="checkbox"
          />
          <div
            class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
          >
            <span
              class="ec-checkbox__check-icon-wrapper"
              data-test="ec-checkbox__check-icon-wrapper"
            >
              <!--v-if-->
            </span>
            <label
              class="ec-checkbox__label ec-checkbox__label--is-single-line"
              data-test="ec-checkbox__label"
              for="ec-checkbox-2"
              title="Name two"
            >
              
              <div
                class="ec-multiple-values-selection__label-wrapper"
              >
                <svg
                  class="ec-icon ec-icon--success ec-multiple-values-selection__icon"
                  height="20"
                  width="20"
                >
                  <use
                    xlink:href="#ec-rounded-partial"
                  />
                </svg>
                <span
                  class="ec-multiple-values-selection__label-text"
                >
                  Name two
                </span>
              </div>
              
            </label>
          </div>
          <!--v-if-->
        </div>
      </li>
      <li
        class="ec-multiple-values-selection__value-wrapper"
        data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
      >
        <div
          class="ec-checkbox ec-multiple-values-selection__checkbox"
          data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-2 ec-checkbox"
        >
          <input
            class="ec-checkbox__input"
            data-test="ec-checkbox__input"
            id="ec-checkbox-3"
            type="checkbox"
          />
          <div
            class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
          >
            <span
              class="ec-checkbox__check-icon-wrapper"
              data-test="ec-checkbox__check-icon-wrapper"
            >
              <!--v-if-->
            </span>
            <label
              class="ec-checkbox__label ec-checkbox__label--is-single-line"
              data-test="ec-checkbox__label"
              for="ec-checkbox-3"
              title="Cancelled"
            >
              
              <div
                class="ec-multiple-values-selection__label-wrapper"
              >
                <svg
                  class="ec-icon ec-icon--error ec-multiple-values-selection__icon"
                  height="20"
                  width="20"
                >
                  <use
                    xlink:href="#ec-rounded-cancelled"
                  />
                </svg>
                <span
                  class="ec-multiple-values-selection__label-text"
                >
                  Cancelled
                </span>
              </div>
              
            </label>
          </div>
          <!--v-if-->
        </div>
      </li>
      
    </ul>
  </div>
  
</div>
`;

exports[`EcMultipleValuesSelection > search > should render properly when isSearchable is true 1`] = `
<div
  class="ec-multiple-values-selection"
  data-test="ec-multiple-values-selection"
>
  <div
    class="ec-multiple-values-selection__search-area"
  >
    <svg
      class="ec-icon ec-icon--interactive ec-multiple-values-selection__search-icon"
      data-test="ec-multiple-values-selection__search-icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-search"
      />
    </svg>
    <input
      autocomplete="off"
      class="ec-multiple-values-selection__search-input"
      data-test="ec-multiple-values-selection__search-input"
      placeholder="Search..."
      type="text"
    />
  </div>
  
  <!--v-if-->
  <div
    class="ec-multiple-values-selection__values"
  >
    <ul>
      
      <li
        class="ec-multiple-values-selection__value-wrapper"
        data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
      >
        <div
          class="ec-checkbox ec-multiple-values-selection__checkbox"
          data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-0 ec-checkbox"
        >
          <input
            class="ec-checkbox__input"
            data-test="ec-checkbox__input"
            id="ec-checkbox-1"
            type="checkbox"
          />
          <div
            class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
          >
            <span
              class="ec-checkbox__check-icon-wrapper"
              data-test="ec-checkbox__check-icon-wrapper"
            >
              <!--v-if-->
            </span>
            <label
              class="ec-checkbox__label ec-checkbox__label--is-single-line"
              data-test="ec-checkbox__label"
              for="ec-checkbox-1"
              title="Success"
            >
              
              <div
                class="ec-multiple-values-selection__label-wrapper"
              >
                <svg
                  class="ec-icon ec-icon--success ec-multiple-values-selection__icon"
                  height="20"
                  width="20"
                >
                  <use
                    xlink:href="#ec-rounded-check"
                  />
                </svg>
                <span
                  class="ec-multiple-values-selection__label-text"
                >
                  Success
                </span>
              </div>
              
            </label>
          </div>
          <!--v-if-->
        </div>
      </li>
      <li
        class="ec-multiple-values-selection__value-wrapper"
        data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
      >
        <div
          class="ec-checkbox ec-multiple-values-selection__checkbox"
          data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-1 ec-checkbox"
        >
          <input
            class="ec-checkbox__input"
            data-test="ec-checkbox__input"
            id="ec-checkbox-2"
            type="checkbox"
          />
          <div
            class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
          >
            <span
              class="ec-checkbox__check-icon-wrapper"
              data-test="ec-checkbox__check-icon-wrapper"
            >
              <!--v-if-->
            </span>
            <label
              class="ec-checkbox__label ec-checkbox__label--is-single-line"
              data-test="ec-checkbox__label"
              for="ec-checkbox-2"
              title="Name two"
            >
              
              <div
                class="ec-multiple-values-selection__label-wrapper"
              >
                <svg
                  class="ec-icon ec-icon--success ec-multiple-values-selection__icon"
                  height="20"
                  width="20"
                >
                  <use
                    xlink:href="#ec-rounded-partial"
                  />
                </svg>
                <span
                  class="ec-multiple-values-selection__label-text"
                >
                  Name two
                </span>
              </div>
              
            </label>
          </div>
          <!--v-if-->
        </div>
      </li>
      <li
        class="ec-multiple-values-selection__value-wrapper"
        data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
      >
        <div
          class="ec-checkbox ec-multiple-values-selection__checkbox"
          data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-2 ec-checkbox"
        >
          <input
            class="ec-checkbox__input"
            data-test="ec-checkbox__input"
            id="ec-checkbox-3"
            type="checkbox"
          />
          <div
            class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
          >
            <span
              class="ec-checkbox__check-icon-wrapper"
              data-test="ec-checkbox__check-icon-wrapper"
            >
              <!--v-if-->
            </span>
            <label
              class="ec-checkbox__label ec-checkbox__label--is-single-line"
              data-test="ec-checkbox__label"
              for="ec-checkbox-3"
              title="Cancelled"
            >
              
              <div
                class="ec-multiple-values-selection__label-wrapper"
              >
                <svg
                  class="ec-icon ec-icon--error ec-multiple-values-selection__icon"
                  height="20"
                  width="20"
                >
                  <use
                    xlink:href="#ec-rounded-cancelled"
                  />
                </svg>
                <span
                  class="ec-multiple-values-selection__label-text"
                >
                  Cancelled
                </span>
              </div>
              
            </label>
          </div>
          <!--v-if-->
        </div>
      </li>
      
    </ul>
  </div>
  
</div>
`;

exports[`EcMultipleValuesSelection > search > should render properly when searchFilterPlaceholder is set 1`] = `
<input
  autocomplete="off"
  class="ec-multiple-values-selection__search-input"
  data-test="ec-multiple-values-selection__search-input"
  placeholder="Custom placeholder"
  type="text"
/>
`;

exports[`EcMultipleValuesSelection > select all > should be indeterminate when at least one option is selected 1`] = `
<div
  class="ec-checkbox"
  data-test="ec-multiple-values-selection__select-all ec-checkbox"
>
  <input
    class="ec-checkbox__input"
    data-test="ec-checkbox__input"
    id="ec-checkbox-1"
    type="checkbox"
  />
  <div
    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
  >
    <span
      class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--indeterminate"
      data-test="ec-checkbox__check-icon-wrapper"
    >
      <span
        class="ec-checkbox__indeterminate-icon"
        data-test="ec-checkbox__indeterminate-icon"
      />
    </span>
    <label
      class="ec-checkbox__label ec-checkbox__label--is-single-line"
      data-test="ec-checkbox__label"
      for="ec-checkbox-1"
      title="Select all"
    >
      
      Select all
      
    </label>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcMultipleValuesSelection > select all > should not be indeterminate when Select all gets click 1`] = `
<div
  class="ec-checkbox"
  data-test="ec-multiple-values-selection__select-all ec-checkbox"
>
  <input
    class="ec-checkbox__input"
    data-test="ec-checkbox__input"
    id="ec-checkbox-1"
    type="checkbox"
  />
  <div
    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
  >
    <span
      class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked"
      data-test="ec-checkbox__check-icon-wrapper"
    >
      <svg
        class="ec-icon ec-checkbox__check-icon"
        data-test="ec-checkbox__check-icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-check"
        />
      </svg>
    </span>
    <label
      class="ec-checkbox__label ec-checkbox__label--is-single-line"
      data-test="ec-checkbox__label"
      for="ec-checkbox-1"
      title="Select all"
    >
      
      Select all
      
    </label>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcMultipleValuesSelection > select all > should not be indeterminate when all options are selected 1`] = `
<div
  class="ec-checkbox"
  data-test="ec-multiple-values-selection__select-all ec-checkbox"
>
  <input
    class="ec-checkbox__input"
    data-test="ec-checkbox__input"
    id="ec-checkbox-1"
    type="checkbox"
  />
  <div
    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
  >
    <span
      class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked"
      data-test="ec-checkbox__check-icon-wrapper"
    >
      <svg
        class="ec-icon ec-checkbox__check-icon"
        data-test="ec-checkbox__check-icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-check"
        />
      </svg>
    </span>
    <label
      class="ec-checkbox__label ec-checkbox__label--is-single-line"
      data-test="ec-checkbox__label"
      for="ec-checkbox-1"
      title="Select all"
    >
      
      Select all
      
    </label>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcMultipleValuesSelection > should render correctly if all the required props are passed 1`] = `
<div
  class="ec-multiple-values-selection"
  data-test="ec-multiple-values-selection"
>
  <!--v-if-->
  
  <!--v-if-->
  <div
    class="ec-multiple-values-selection__values"
  >
    <ul>
      
      <li
        class="ec-multiple-values-selection__value-wrapper"
        data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
      >
        <div
          class="ec-checkbox ec-multiple-values-selection__checkbox"
          data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-0 ec-checkbox"
        >
          <input
            class="ec-checkbox__input"
            data-test="ec-checkbox__input"
            id="ec-checkbox-1"
            type="checkbox"
          />
          <div
            class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
          >
            <span
              class="ec-checkbox__check-icon-wrapper"
              data-test="ec-checkbox__check-icon-wrapper"
            >
              <!--v-if-->
            </span>
            <label
              class="ec-checkbox__label ec-checkbox__label--is-single-line"
              data-test="ec-checkbox__label"
              for="ec-checkbox-1"
              title="Success"
            >
              
              <div
                class="ec-multiple-values-selection__label-wrapper"
              >
                <svg
                  class="ec-icon ec-icon--success ec-multiple-values-selection__icon"
                  height="20"
                  width="20"
                >
                  <use
                    xlink:href="#ec-rounded-check"
                  />
                </svg>
                <span
                  class="ec-multiple-values-selection__label-text"
                >
                  Success
                </span>
              </div>
              
            </label>
          </div>
          <!--v-if-->
        </div>
      </li>
      <li
        class="ec-multiple-values-selection__value-wrapper"
        data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
      >
        <div
          class="ec-checkbox ec-multiple-values-selection__checkbox"
          data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-1 ec-checkbox"
        >
          <input
            class="ec-checkbox__input"
            data-test="ec-checkbox__input"
            id="ec-checkbox-2"
            type="checkbox"
          />
          <div
            class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
          >
            <span
              class="ec-checkbox__check-icon-wrapper"
              data-test="ec-checkbox__check-icon-wrapper"
            >
              <!--v-if-->
            </span>
            <label
              class="ec-checkbox__label ec-checkbox__label--is-single-line"
              data-test="ec-checkbox__label"
              for="ec-checkbox-2"
              title="Name two"
            >
              
              <div
                class="ec-multiple-values-selection__label-wrapper"
              >
                <svg
                  class="ec-icon ec-icon--success ec-multiple-values-selection__icon"
                  height="20"
                  width="20"
                >
                  <use
                    xlink:href="#ec-rounded-partial"
                  />
                </svg>
                <span
                  class="ec-multiple-values-selection__label-text"
                >
                  Name two
                </span>
              </div>
              
            </label>
          </div>
          <!--v-if-->
        </div>
      </li>
      <li
        class="ec-multiple-values-selection__value-wrapper"
        data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
      >
        <div
          class="ec-checkbox ec-multiple-values-selection__checkbox"
          data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-2 ec-checkbox"
        >
          <input
            class="ec-checkbox__input"
            data-test="ec-checkbox__input"
            id="ec-checkbox-3"
            type="checkbox"
          />
          <div
            class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
          >
            <span
              class="ec-checkbox__check-icon-wrapper"
              data-test="ec-checkbox__check-icon-wrapper"
            >
              <!--v-if-->
            </span>
            <label
              class="ec-checkbox__label ec-checkbox__label--is-single-line"
              data-test="ec-checkbox__label"
              for="ec-checkbox-3"
              title="Cancelled"
            >
              
              <div
                class="ec-multiple-values-selection__label-wrapper"
              >
                <svg
                  class="ec-icon ec-icon--error ec-multiple-values-selection__icon"
                  height="20"
                  width="20"
                >
                  <use
                    xlink:href="#ec-rounded-cancelled"
                  />
                </svg>
                <span
                  class="ec-multiple-values-selection__label-text"
                >
                  Cancelled
                </span>
              </div>
              
            </label>
          </div>
          <!--v-if-->
        </div>
      </li>
      
    </ul>
  </div>
  
</div>
`;

exports[`EcMultipleValuesSelection > should render loading state 1`] = `
<div
  class="ec-multiple-values-selection"
  data-test="ec-multiple-values-selection"
>
  <!--v-if-->
  <div
    class="ec-multiple-values-selection__loading"
  >
    <svg
      class="ec-icon ec-loading-icon"
      data-test="ec-loading-icon"
      height="32"
      width="32"
    >
      <use
        xlink:href="#ec-simple-loading"
      />
    </svg>
  </div>
</div>
`;

exports[`EcMultipleValuesSelection > should render with rounded icons 1`] = `
<div
  class="ec-multiple-values-selection"
  data-test="ec-multiple-values-selection"
>
  <!--v-if-->
  
  <!--v-if-->
  <div
    class="ec-multiple-values-selection__values"
  >
    <ul>
      
      <li
        class="ec-multiple-values-selection__value-wrapper"
        data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
      >
        <div
          class="ec-checkbox ec-multiple-values-selection__checkbox"
          data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-0 ec-checkbox"
        >
          <input
            class="ec-checkbox__input"
            data-test="ec-checkbox__input"
            id="ec-checkbox-1"
            type="checkbox"
          />
          <div
            class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
          >
            <span
              class="ec-checkbox__check-icon-wrapper"
              data-test="ec-checkbox__check-icon-wrapper"
            >
              <!--v-if-->
            </span>
            <label
              class="ec-checkbox__label ec-checkbox__label--is-single-line"
              data-test="ec-checkbox__label"
              for="ec-checkbox-1"
              title="Currency EUR"
            >
              
              <div
                class="ec-multiple-values-selection__label-wrapper"
              >
                <svg
                  class="ec-icon ec-icon--interactive ec-multiple-values-selection__icon ec-multiple-values-selection__icon--rounded"
                  height="20"
                  width="20"
                >
                  <use
                    xlink:href="#ec-currency-eur"
                  />
                </svg>
                <span
                  class="ec-multiple-values-selection__label-text"
                >
                  Currency EUR
                </span>
              </div>
              
            </label>
          </div>
          <!--v-if-->
        </div>
      </li>
      
    </ul>
  </div>
  
</div>
`;

exports[`EcMultipleValuesSelection > should set the empty state icon 1`] = `
<div
  class="ec-multiple-values-selection"
  data-test="ec-multiple-values-selection"
>
  <!--v-if-->
  <div
    class="ec-multiple-values-selection__no-results-wrapper"
  >
    <svg
      class="ec-icon ec-icon--info ec-multiple-values-selection__no-results-icon"
      data-test="ec-multiple-values-selection__no-results-icon"
      height="32"
      width="32"
    >
      <use
        xlink:href="#ec-simple-check"
      />
    </svg>
    <span
      class="ec-multiple-values-selection__no-results-message"
    >
      No items
    </span>
  </div>
</div>
`;

exports[`EcMultipleValuesSelection > should set the empty state message 1`] = `
<div
  class="ec-multiple-values-selection"
  data-test="ec-multiple-values-selection"
>
  <!--v-if-->
  <div
    class="ec-multiple-values-selection__no-results-wrapper"
  >
    <svg
      class="ec-icon ec-icon--info ec-multiple-values-selection__no-results-icon"
      data-test="ec-multiple-values-selection__no-results-icon"
      height="32"
      width="32"
    >
      <use
        xlink:href="#ec-simple-error"
      />
    </svg>
    <span
      class="ec-multiple-values-selection__no-results-message"
    >
      No items
    </span>
  </div>
</div>
`;

exports[`EcMultipleValuesSelection > should set the error icon 1`] = `
<div
  class="ec-multiple-values-selection"
  data-test="ec-multiple-values-selection"
>
  <!--v-if-->
  <div
    class="ec-multiple-values-selection__error-wrapper"
  >
    <svg
      class="ec-icon ec-icon--error ec-multiple-values-selection__error-icon"
      data-test="ec-multiple-values-selection__error-icon"
      height="32"
      width="32"
    >
      <use
        xlink:href="#ec-simple-check"
      />
    </svg>
    <span
      class="ec-multiple-values-selection__error-message"
    >
      Error message
    </span>
  </div>
</div>
`;

exports[`EcMultipleValuesSelection > should set the error message 1`] = `
<div
  class="ec-multiple-values-selection"
  data-test="ec-multiple-values-selection"
>
  <!--v-if-->
  <div
    class="ec-multiple-values-selection__error-wrapper"
  >
    <svg
      class="ec-icon ec-icon--error ec-multiple-values-selection__error-icon"
      data-test="ec-multiple-values-selection__error-icon"
      height="32"
      width="32"
    >
      <use
        xlink:href="#ec-simple-error"
      />
    </svg>
    <span
      class="ec-multiple-values-selection__error-message"
    >
      Error message
    </span>
  </div>
</div>
`;

exports[`EcMultipleValuesSelection > should toggle (select/unselect) all options clicked 1`] = `
<div
  class="ec-multiple-values-selection"
  data-test="ec-multiple-values-selection"
>
  <!--v-if-->
  
  <div
    class="ec-multiple-values-selection__select-all"
  >
    <div
      class="ec-checkbox"
      data-test="ec-multiple-values-selection__select-all ec-checkbox"
    >
      <input
        class="ec-checkbox__input"
        data-test="ec-checkbox__input"
        id="ec-checkbox-1"
        type="checkbox"
      />
      <div
        class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
      >
        <span
          class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked"
          data-test="ec-checkbox__check-icon-wrapper"
        >
          <svg
            class="ec-icon ec-checkbox__check-icon"
            data-test="ec-checkbox__check-icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-check"
            />
          </svg>
        </span>
        <label
          class="ec-checkbox__label ec-checkbox__label--is-single-line"
          data-test="ec-checkbox__label"
          for="ec-checkbox-1"
          title="Select all"
        >
          
          Select all
          
        </label>
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="ec-multiple-values-selection__values"
  >
    <ul>
      
      <li
        class="ec-multiple-values-selection__value-wrapper"
        data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--selected"
      >
        <div
          class="ec-checkbox ec-multiple-values-selection__checkbox"
          data-test="ec-multiple-values-selection__checkbox-deselect ec-multiple-values-selection__checkbox-deselect-0 ec-checkbox"
        >
          <input
            class="ec-checkbox__input"
            data-test="ec-checkbox__input"
            id="ec-checkbox-2"
            type="checkbox"
          />
          <div
            class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
          >
            <span
              class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked"
              data-test="ec-checkbox__check-icon-wrapper"
            >
              <svg
                class="ec-icon ec-checkbox__check-icon"
                data-test="ec-checkbox__check-icon"
                height="16"
                width="16"
              >
                <use
                  xlink:href="#ec-simple-check"
                />
              </svg>
            </span>
            <label
              class="ec-checkbox__label ec-checkbox__label--is-single-line"
              data-test="ec-checkbox__label"
              for="ec-checkbox-2"
              title="Success"
            >
              
              <div
                class="ec-multiple-values-selection__label-wrapper"
              >
                <svg
                  class="ec-icon ec-icon--success ec-multiple-values-selection__icon"
                  height="20"
                  width="20"
                >
                  <use
                    xlink:href="#ec-rounded-check"
                  />
                </svg>
                <span
                  class="ec-multiple-values-selection__label-text"
                >
                  Success
                </span>
              </div>
              
            </label>
          </div>
          <!--v-if-->
        </div>
      </li>
      <li
        class="ec-multiple-values-selection__value-wrapper"
        data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--selected"
      >
        <div
          class="ec-checkbox ec-multiple-values-selection__checkbox"
          data-test="ec-multiple-values-selection__checkbox-deselect ec-multiple-values-selection__checkbox-deselect-1 ec-checkbox"
        >
          <input
            class="ec-checkbox__input"
            data-test="ec-checkbox__input"
            id="ec-checkbox-3"
            type="checkbox"
          />
          <div
            class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
          >
            <span
              class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked"
              data-test="ec-checkbox__check-icon-wrapper"
            >
              <svg
                class="ec-icon ec-checkbox__check-icon"
                data-test="ec-checkbox__check-icon"
                height="16"
                width="16"
              >
                <use
                  xlink:href="#ec-simple-check"
                />
              </svg>
            </span>
            <label
              class="ec-checkbox__label ec-checkbox__label--is-single-line"
              data-test="ec-checkbox__label"
              for="ec-checkbox-3"
              title="Name two"
            >
              
              <div
                class="ec-multiple-values-selection__label-wrapper"
              >
                <svg
                  class="ec-icon ec-icon--success ec-multiple-values-selection__icon"
                  height="20"
                  width="20"
                >
                  <use
                    xlink:href="#ec-rounded-partial"
                  />
                </svg>
                <span
                  class="ec-multiple-values-selection__label-text"
                >
                  Name two
                </span>
              </div>
              
            </label>
          </div>
          <!--v-if-->
        </div>
      </li>
      <li
        class="ec-multiple-values-selection__value-wrapper"
        data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--selected"
      >
        <div
          class="ec-checkbox ec-multiple-values-selection__checkbox"
          data-test="ec-multiple-values-selection__checkbox-deselect ec-multiple-values-selection__checkbox-deselect-2 ec-checkbox"
        >
          <input
            class="ec-checkbox__input"
            data-test="ec-checkbox__input"
            id="ec-checkbox-4"
            type="checkbox"
          />
          <div
            class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
          >
            <span
              class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked"
              data-test="ec-checkbox__check-icon-wrapper"
            >
              <svg
                class="ec-icon ec-checkbox__check-icon"
                data-test="ec-checkbox__check-icon"
                height="16"
                width="16"
              >
                <use
                  xlink:href="#ec-simple-check"
                />
              </svg>
            </span>
            <label
              class="ec-checkbox__label ec-checkbox__label--is-single-line"
              data-test="ec-checkbox__label"
              for="ec-checkbox-4"
              title="Cancelled"
            >
              
              <div
                class="ec-multiple-values-selection__label-wrapper"
              >
                <svg
                  class="ec-icon ec-icon--error ec-multiple-values-selection__icon"
                  height="20"
                  width="20"
                >
                  <use
                    xlink:href="#ec-rounded-cancelled"
                  />
                </svg>
                <span
                  class="ec-multiple-values-selection__label-text"
                >
                  Cancelled
                </span>
              </div>
              
            </label>
          </div>
          <!--v-if-->
        </div>
      </li>
      
    </ul>
  </div>
  
</div>
`;

exports[`EcMultipleValuesSelection > should toggle (select/unselect) all options clicked 2`] = `
<div
  class="ec-multiple-values-selection"
  data-test="ec-multiple-values-selection"
>
  <!--v-if-->
  
  <div
    class="ec-multiple-values-selection__select-all"
  >
    <div
      class="ec-checkbox"
      data-test="ec-multiple-values-selection__select-all ec-checkbox"
    >
      <input
        class="ec-checkbox__input"
        data-test="ec-checkbox__input"
        id="ec-checkbox-1"
        type="checkbox"
      />
      <div
        class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
      >
        <span
          class="ec-checkbox__check-icon-wrapper"
          data-test="ec-checkbox__check-icon-wrapper"
        >
          <!--v-if-->
        </span>
        <label
          class="ec-checkbox__label ec-checkbox__label--is-single-line"
          data-test="ec-checkbox__label"
          for="ec-checkbox-1"
          title="Select all"
        >
          
          Select all
          
        </label>
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="ec-multiple-values-selection__values"
  >
    <ul>
      
      <li
        class="ec-multiple-values-selection__value-wrapper"
        data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
      >
        <div
          class="ec-checkbox ec-multiple-values-selection__checkbox"
          data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-0 ec-checkbox"
        >
          <input
            class="ec-checkbox__input"
            data-test="ec-checkbox__input"
            id="ec-checkbox-2"
            type="checkbox"
          />
          <div
            class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
          >
            <span
              class="ec-checkbox__check-icon-wrapper"
              data-test="ec-checkbox__check-icon-wrapper"
            >
              <!--v-if-->
            </span>
            <label
              class="ec-checkbox__label ec-checkbox__label--is-single-line"
              data-test="ec-checkbox__label"
              for="ec-checkbox-2"
              title="Success"
            >
              
              <div
                class="ec-multiple-values-selection__label-wrapper"
              >
                <svg
                  class="ec-icon ec-icon--success ec-multiple-values-selection__icon"
                  height="20"
                  width="20"
                >
                  <use
                    xlink:href="#ec-rounded-check"
                  />
                </svg>
                <span
                  class="ec-multiple-values-selection__label-text"
                >
                  Success
                </span>
              </div>
              
            </label>
          </div>
          <!--v-if-->
        </div>
      </li>
      <li
        class="ec-multiple-values-selection__value-wrapper"
        data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
      >
        <div
          class="ec-checkbox ec-multiple-values-selection__checkbox"
          data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-1 ec-checkbox"
        >
          <input
            class="ec-checkbox__input"
            data-test="ec-checkbox__input"
            id="ec-checkbox-3"
            type="checkbox"
          />
          <div
            class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
          >
            <span
              class="ec-checkbox__check-icon-wrapper"
              data-test="ec-checkbox__check-icon-wrapper"
            >
              <!--v-if-->
            </span>
            <label
              class="ec-checkbox__label ec-checkbox__label--is-single-line"
              data-test="ec-checkbox__label"
              for="ec-checkbox-3"
              title="Name two"
            >
              
              <div
                class="ec-multiple-values-selection__label-wrapper"
              >
                <svg
                  class="ec-icon ec-icon--success ec-multiple-values-selection__icon"
                  height="20"
                  width="20"
                >
                  <use
                    xlink:href="#ec-rounded-partial"
                  />
                </svg>
                <span
                  class="ec-multiple-values-selection__label-text"
                >
                  Name two
                </span>
              </div>
              
            </label>
          </div>
          <!--v-if-->
        </div>
      </li>
      <li
        class="ec-multiple-values-selection__value-wrapper"
        data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
      >
        <div
          class="ec-checkbox ec-multiple-values-selection__checkbox"
          data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-2 ec-checkbox"
        >
          <input
            class="ec-checkbox__input"
            data-test="ec-checkbox__input"
            id="ec-checkbox-4"
            type="checkbox"
          />
          <div
            class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
          >
            <span
              class="ec-checkbox__check-icon-wrapper"
              data-test="ec-checkbox__check-icon-wrapper"
            >
              <!--v-if-->
            </span>
            <label
              class="ec-checkbox__label ec-checkbox__label--is-single-line"
              data-test="ec-checkbox__label"
              for="ec-checkbox-4"
              title="Cancelled"
            >
              
              <div
                class="ec-multiple-values-selection__label-wrapper"
              >
                <svg
                  class="ec-icon ec-icon--error ec-multiple-values-selection__icon"
                  height="20"
                  width="20"
                >
                  <use
                    xlink:href="#ec-rounded-cancelled"
                  />
                </svg>
                <span
                  class="ec-multiple-values-selection__label-text"
                >
                  Cancelled
                </span>
              </div>
              
            </label>
          </div>
          <!--v-if-->
        </div>
      </li>
      
    </ul>
  </div>
  
</div>
`;
